--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" type="image/ico" href="/src/assets/SASMcolour.webp" />
+    <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Template</title>
+    <title>Ladkan News</title>
   </head>
-  <body style="background-color: #25252c; color: white;">
+  <body style="background-color: var(--bg-color); color: white;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id='alert-container'></div>
     <div id="root"></div>
 
     <script src="/src/index.tsx" type="module"></script>
+    <script src="/src/assets/lazysizes.min.js"></script>
   </body>
 </html>
